top panel lasts full height of screen, added cki icons

--- a/index.html
+++ b/index.html
@@ -30,15 +30,28 @@
 
 </nav>
 
-<div class="frontContent">
-    <h1 class="title">Hunger,<br>Over Easy</h1>
-    <button class="learnmore">Learn More</button>
+<div class="container-fluid panel">
+    <div class="topFormat">
+        <h1 class="title">Hunger,<br>Over Easy</h1>
+        <button class="learnMore">Learn More</button>
+    </div>
+
+    <img id="pan" class="responsive" src="imgs/fryingPan.svg" alt="">
+    <img id="blob" class="responsive" src="imgs/bigBlob.svg" alt="">
+</div>
+
+<div class="panel aboutUs">
+    <h1>About Us</h1>
+    <p>UCI Circle K’s 6-hour Chopped-style cooking competition.</p>
+</div>
+
+<div class="footer">
+    <img src="imgs/citrusDivision.svg" alt="" id="citrusDiv">
+    <img src="imgs/cal-nev-ha.svg" alt="" id="calnevha">
+    <img src="imgs/ckiLogo.svg" alt="" id="ckiLogo">
 </div>
 
 
-
-<img id="pan" class="responsive" src="imgs/fryingPan.svg" alt="">
-<img id="blob" class="responsive" src="imgs/bigBlob.svg" alt="">
 <!--<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -50,25 +63,3 @@
 
 </html>
 
-
-<!--
-<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-
-#blob{
-    z-index: 0;
-    position: absolute;
-    left: 0;
-    margin-top: 50px;
-
-}
-
-
-#pan{
-    z-index: 1;
-    position: absolute;
-    max-width: 1000px;
-
-}
-
-
--->
