added cki icons bottom right

--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@
     <p>UCI Circle K’s 6-hour Chopped-style cooking competition.</p>
 </div>
 
+<div class="panel">
+
+</div>
+
 <div class="footer">
-    <img src="imgs/citrusDivision.svg" alt="" id="citrusDiv">
-    <img src="imgs/cal-nev-ha.svg" alt="" id="calnevha">
     <img src="imgs/ckiLogo.svg" alt="" id="ckiLogo">
+    <img src="imgs/cal-nev-ha.svg" alt="" id="calnevha">
+    <img src="imgs/citrusDivision.svg" alt="" id="citrusDiv">
+
+
 </div>
 
 
@@ -62,4 +68,15 @@
 </body>
 
 </html>
+
+
+<!--
+
+@media screen and (max-width: 500px) {
+    .navbar{
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+-->
 
