reformatted navbar, changed landing page design, added stickers to file

--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -131,7 +131,25 @@
     </div>
 </div>
 
+<!--<div class="test">-->
+    <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
+    <!--<span>-->
+        <!--<div>Irivne, California</div>-->
+        <!--<div>OTHER STUFF HERE</div>-->
+        <!--<div>Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a></div>-->
+    <!--</span>-->
+    <!--<div>-->
+        <!--<img class="socialMediaFooter" src="../imgs/email.svg" alt="">-->
+        <!--<img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">-->
+        <!--<img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">-->
+    <!--</div>-->
+
+<!--</div>-->
+
+
 <div class="footer">
+    <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
+
     <div class="middleSection">
         <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
         <div class="middleFooter inline footerMid">
