--- a/html/eventsPage.html
+++ b/html/eventsPage.html
@@ -32,6 +32,13 @@
 
 </nav>
 
+<iframe class="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_1_spam.svg" alt="">-->
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_2_donut.svg" alt="">-->
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_3_peach.svg" alt="">-->
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_1_tea.svg" alt="">-->
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_2_corn.svg" alt="">-->
+<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_3_mochi.svg" alt="">-->
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
