--- a/html/index.html
+++ b/html/index.html
@@ -33,16 +33,16 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<!--figure out margin in index.css in the page panel class-->
 
 
-<div class="container-fluid pagePanel">
+<div class="container-fluid pagePanel homePageMainPanel">
     <div class="topFormat">
         <h1 class="title slideUp">Hunger,<br>Over Easy</h1>
         <button class="learnMore slideUp">Learn More</button>
     </div>
 
     <img id="pan" class="responsive slideUp" src="../imgs/fryingPan.svg" alt="">
-    <img id="blob" class="responsive" src="../imgs/bigBlob.svg" alt="">
 </div>
 
 <div class="pagePanel aboutUs">
@@ -54,46 +54,46 @@
     <!--&lt;!&ndash;<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>&ndash;&gt;-->
 <!--</div>-->
 
-<div class="footer">
-    <div class="middleSection">
-        <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
-        <div class="middleFooter inline footerMid">
-            Irvine, California
-            <br>
-            OTHER STUFF HERE
-            <br>
-            Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+<!--<div class="footer">-->
+    <!--<div class="middleSection">-->
+        <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
+        <!--<div class="middleFooter inline footerMid">-->
+            <!--Irvine, California-->
+            <!--<br>-->
+            <!--OTHER STUFF HERE-->
+            <!--<br>-->
+            <!--Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>-->
 
-        </div>
+        <!--</div>-->
 
-        <div class="footerContact inline footerMid">
-            Contact Us
-            <br>
-            <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
-            <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
-            <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
+        <!--<div class="footerContact inline footerMid">-->
+            <!--Contact Us-->
+            <!--<br>-->
+            <!--<img class="socialMediaFooter" src="../imgs/email.svg" alt="">-->
+            <!--<img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">-->
+            <!--<img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">-->
 
-        </div>
+        <!--</div>-->
 
-    </div>
-    <br>
-    <div class="bottomSection">
-        <div class="copyright inline">
-            Copyright 2016-2021
-            <br>
-            Hunger, Over Easy
-        </div>
-        <div class="ckiLogos inline">
-            <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
-            <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
-            <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
-        </div>
-    </div>
-
-
+    <!--</div>-->
+    <!--<br>-->
+    <!--<div class="bottomSection">-->
+        <!--<div class="copyright inline">-->
+            <!--Copyright 2016-2021-->
+            <!--<br>-->
+            <!--Hunger, Over Easy-->
+        <!--</div>-->
+        <!--<div class="ckiLogos inline">-->
+            <!--<img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">-->
+            <!--<img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">-->
+            <!--<img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">-->
+        <!--</div>-->
+    <!--</div>-->
 
 
-</div>
+
+
+<!--</div>-->
 
 
 <!--<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
