finished basic page style issues

--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -32,22 +32,21 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="about">
-    <h1>About</h1>
-    <div class="mainDesc">
-        Hunger, Over Easy is a fundraising event created and maintained
-        by UCI Circle K members. Circle K International is a collegiate
-        organization dedicated to service, leadership, and fellowship.
-        With over 400 paying members, UCI CKI is the largest Circle K
-        club in the world.
-    </div>
+<div class="header about">
+    About
 </div>
 
-
+<div class="mainDesc">
+    Hunger, Over Easy is a fundraising event created and maintained
+    by UCI Circle K members. Circle K International is a collegiate
+    organization dedicated to service, leadership, and fellowship.
+    With over 400 paying members, UCI CKI is the largest Circle K
+    club in the world.
+</div>
 
 <div class="committeeSection">
     <h2 class="teamTitle">Meet Our Team</h2>
-    <h3 class="shokugeki">Shokugeki Vol. IV Committee</h3>
+    <h3 class="shokugeki">The Shokugeki Vol. IV Committee</h3>
     <div class="committee">
         <div class="member">
             <div class="memberPhoto">
@@ -146,47 +145,54 @@
 
 <!--</div>-->
 
-
-<div class="footer">
-    <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
-
-    <div class="middleSection">
-        <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
-        <div class="middleFooter inline footerMid">
-            Irvine, California
-            <br>
-            OTHER STUFF HERE
-            <br>
-            Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+<footer>
+    <div class="footer">
+        <div class="left column">
+            <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
+        </div>
+        <div class="middle column">
+            <div class="smaller">
+                <div>
+                    (c) 2020-2021 University of California, Irvine - Circle K - All Rights Reserved.
+                </div>
+                <div>
+                    Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+                </div>
+            </div>
+            <div class="ckiLogos inline">
+                <a href="http://www.cnhcirclek.org/divisions/citrus/">
+                    <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
+                </a>
+                <a href="http://www.cnhcirclek.org/">
+                    <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
+                </a>
+                <a href="https://www.circlek.org/">
+                    <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
+                </a>
+            </div>
 
         </div>
-
-        <div class="footerContact inline footerMid">
-            Contact Us
-            <br>
-            <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
-            <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
-            <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
-
+        <div class="right column">
+            <div>
+                Contact Us
+            </div>
+            <div>
+                <a href="mailto:hungerovereasy@gmail.com">
+                    <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/hungerovereasy/">
+                    <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
+                </a>
+                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured">
+                    <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
+                </a>
+            </div>
         </div>
 
     </div>
-    <br>
-    <div class="bottomSection">
-        <div class="copyright inline">
-            Copyright 2016-2021
-            <br>
-            Hunger, Over Easy
-        </div>
-        <div class="ckiLogos inline">
-            <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
-            <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
-            <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
-        </div>
-    </div>
 
-</div>
 
+</footer>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
