--- a/html/eventsPage.html
+++ b/html/eventsPage.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/eventsPage.css">
 </head>
 <body>
 
@@ -32,7 +33,12 @@
 
 </nav>
 
-<iframe class="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<div class="header">
+    Events
+</div>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeeMJTmXLRIoGw-9OFyOpVh2stmk9swh7ZMwTIX1B1Vkl-XQg/viewform?embedded=true" width="640" height="2352" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!--<iframe class="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
 <!--<img class="sticker" src="../imgs/stickerPhotos/drop1_1_spam.svg" alt="">-->
 <!--<img class="sticker" src="../imgs/stickerPhotos/drop1_2_donut.svg" alt="">-->
 <!--<img class="sticker" src="../imgs/stickerPhotos/drop1_3_peach.svg" alt="">-->
@@ -40,6 +46,54 @@
 <!--<img class="sticker" src="../imgs/stickerPhotos/drop2_2_corn.svg" alt="">-->
 <!--<img class="sticker" src="../imgs/stickerPhotos/drop2_3_mochi.svg" alt="">-->
 
+<footer>
+    <div class="footer">
+        <div class="left column">
+            <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
+        </div>
+        <div class="middle column">
+            <div class="smaller">
+                <div>
+                    (c) 2020-2021 University of California, Irvine - Circle K - All Rights Reserved.
+                </div>
+                <div>
+                    Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+                </div>
+            </div>
+            <div class="ckiLogos inline">
+                <a href="http://www.cnhcirclek.org/divisions/citrus/">
+                    <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
+                </a>
+                <a href="http://www.cnhcirclek.org/">
+                    <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
+                </a>
+                <a href="https://www.circlek.org/">
+                    <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
+                </a>
+            </div>
+
+        </div>
+        <div class="right column">
+            <div>
+                Contact Us
+            </div>
+            <div>
+                <a href="mailto:hungerovereasy@gmail.com">
+                    <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/hungerovereasy/">
+                    <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
+                </a>
+                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured">
+                    <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
