--- a/html/index.html
+++ b/html/index.html
@@ -37,63 +37,88 @@
 
 
 <div class="container-fluid pagePanel homePageMainPanel">
-    <div class="topFormat">
-        <h1 class="title slideUp">Hunger,<br>Over Easy</h1>
-        <button class="learnMore slideUp">Learn More</button>
+    <div class="topFormat slideUp">
+        <h1 class="title">Hunger,<br>Over Easy</h1>
+        <a class="learnMore" href="#aboutUs">Learn More</a>
     </div>
 
     <img id="pan" class="responsive slideUp" src="../imgs/fryingPan.svg" alt="">
 </div>
 
-<div class="pagePanel aboutUs">
+<div class="pagePanel aboutUs" id="aboutUs">
     <h1>About Us</h1>
-    <div>UCI Circle K International's s 6-hour Chopped-style cooking competition.</div>
+    <div>
+        Hunger, Over Easy is a five hour cooking celebration that
+        showcases a variety of activities including a "Chopped" style
+        cooking competition, educational booths about nutrition,
+        food challenges, in addition to service booths where we help
+        make food for the homeless.
+    </div>
+    <br>
+    <div>
+        All of our proceeds are donated to Meals on Wheels America,
+        the oldest and largest national organization federally supported
+        to meet the nutritional and social needs of seniors. They
+        support more than 5,000 community-based senior nutrition
+        programs across the United States.
+    </div>
+
 </div>
 
 <!--<div class="pagePanel">-->
     <!--&lt;!&ndash;<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>&ndash;&gt;-->
 <!--</div>-->
 
-<!--<div class="footer">-->
-    <!--<div class="middleSection">-->
-        <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
-        <!--<div class="middleFooter inline footerMid">-->
-            <!--Irvine, California-->
-            <!--<br>-->
-            <!--OTHER STUFF HERE-->
-            <!--<br>-->
-            <!--Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>-->
+<footer>
+    <div class="footer">
+        <div class="left column">
+            <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
+        </div>
+        <div class="middle column">
+            <div class="smaller">
+                <div>
+                    (c) 2020-2021 University of California, Irvine - Circle K - All Rights Reserved.
+                </div>
+                <div>
+                    Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+                </div>
+            </div>
+            <div class="ckiLogos inline">
+                <a href="http://www.cnhcirclek.org/divisions/citrus/">
+                    <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
+                </a>
+                <a href="http://www.cnhcirclek.org/">
+                    <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
+                </a>
+                <a href="https://www.circlek.org/">
+                    <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
+                </a>
+            </div>
 
-        <!--</div>-->
+        </div>
+        <div class="right column">
+            <div>
+                Contact Us
+            </div>
+            <div>
+                <a href="mailto:hungerovereasy@gmail.com">
+                    <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/hungerovereasy/">
+                    <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
+                </a>
+                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured">
+                    <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
+                </a>
+            </div>
+        </div>
 
-        <!--<div class="footerContact inline footerMid">-->
-            <!--Contact Us-->
-            <!--<br>-->
-            <!--<img class="socialMediaFooter" src="../imgs/email.svg" alt="">-->
-            <!--<img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">-->
-            <!--<img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">-->
-
-        <!--</div>-->
-
-    <!--</div>-->
-    <!--<br>-->
-    <!--<div class="bottomSection">-->
-        <!--<div class="copyright inline">-->
-            <!--Copyright 2016-2021-->
-            <!--<br>-->
-            <!--Hunger, Over Easy-->
-        <!--</div>-->
-        <!--<div class="ckiLogos inline">-->
-            <!--<img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">-->
-            <!--<img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">-->
-            <!--<img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">-->
-        <!--</div>-->
-    <!--</div>-->
+    </div>
 
 
+</footer>
 
 
-<!--</div>-->
 
 
 <!--<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
