--- a/html/supportPage.html
+++ b/html/supportPage.html
@@ -32,63 +32,113 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<div class="header">
+    Support
+</div>
 
 
-    <h1>
-        Past Sponsors
-    </h1>
-    <h3>
-        We are incredibly grateful for our sponsors.
-        <br>
-        Without them, we would not be able to host Hunger, Over Easy!
-    </h3>
-    <div class="sponsorLogos">
-        <a class="sponsor" href="https://www.mealsonwheelsamerica.org/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/mealsonwheels.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.rubios.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/rubioscoastalgrill.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.getcrackin.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/wonderfulpistachios.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.chick-fil-a.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/chickfila.png" alt="">
-        </a>
-        <a class="sponsor" href="https://jjsnack.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/jjsnackfoods.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.hi-chew.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/hichew.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.in-n-out.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/innout.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.kabukirestaurants.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/kabuki.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.hubertslemonade.com/#/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/hubertslemonade.png" alt="">
-        </a>
-        <a class="sponsor" href="https://usa.lkk.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/leekumkee.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.albertsons.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/albertsons.png" alt="">
-        </a>
-        <a class="sponsor" href="https://blackbeardiner.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/blackbeardiner.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.traderjoes.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/trader-joes.png" alt="">
-        </a>
-        <a class="sponsor" href="https://www.chipotle.com/" target=”_blank”>
-            <img class="sponsorLogo" src="../imgs/pastSponsors/chipotle.png" alt="">
-        </a>
+<h1 class="sponsorsTitle">
+    Past Sponsors
+</h1>
+<h3 class="sponsorsDesc">
+    We are incredibly grateful for our sponsors.
+    Without them, we would not be able to host Hunger, Over Easy! If you or your organization would like to sponsor us, please contact us at
+    <a href="mailto:hungerovereasy@gmail.com">hungerovereasy@gmail.com</a>, we would love to hear from you!
+</h3>
+<div class="sponsorLogos">
+    <a class="sponsor" href="https://www.mealsonwheelsamerica.org/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/mealsonwheels.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.rubios.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/rubioscoastalgrill.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.getcrackin.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/wonderfulpistachios.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.chick-fil-a.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/chickfila.png" alt="">
+    </a>
+    <a class="sponsor" href="https://jjsnack.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/jjsnackfoods.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.hi-chew.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/hichew.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.in-n-out.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/innout.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.kabukirestaurants.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/kabuki.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.hubertslemonade.com/#/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/hubertslemonade.png" alt="">
+    </a>
+    <a class="sponsor" href="https://usa.lkk.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/leekumkee.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.albertsons.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/albertsons.png" alt="">
+    </a>
+    <a class="sponsor" href="https://blackbeardiner.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/blackbeardiner.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.traderjoes.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/trader-joes.png" alt="">
+    </a>
+    <a class="sponsor" href="https://www.chipotle.com/" target=”_blank”>
+        <img class="sponsorLogo" src="../imgs/pastSponsors/chipotle.png" alt="">
+    </a>
+
+</div>
+
+<footer>
+    <div class="footer">
+        <div class="left column">
+            <img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">
+        </div>
+        <div class="middle column">
+            <div class="smaller">
+                <div>
+                    (c) 2020-2021 University of California, Irvine - Circle K - All Rights Reserved.
+                </div>
+                <div>
+                    Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a>
+                </div>
+            </div>
+            <div class="ckiLogos inline">
+                <a href="http://www.cnhcirclek.org/divisions/citrus/">
+                    <img src="../imgs/ckiLogo.svg" alt="" id="ckiLogo">
+                </a>
+                <a href="http://www.cnhcirclek.org/">
+                    <img src="../imgs/cal-nev-ha.svg" alt="" id="calnevha">
+                </a>
+                <a href="https://www.circlek.org/">
+                    <img src="../imgs/citrusDivision.svg" alt="" id="citrusDiv">
+                </a>
+            </div>
+
+        </div>
+        <div class="right column">
+            <div>
+                Contact Us
+            </div>
+            <div>
+                <a href="mailto:hungerovereasy@gmail.com">
+                    <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/hungerovereasy/">
+                    <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
+                </a>
+                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured">
+                    <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
+                </a>
+            </div>
+        </div>
 
     </div>
 
 
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
