--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<nav class="navbar slideDown">
+<nav class="navbar">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -130,20 +130,7 @@
     </div>
 </div>
 
-<!--<div class="test">-->
-    <!--<img class="logo footerLogo inline footerMid" src="../imgs/hoeLogo.png" alt="Logo">-->
-    <!--<span>-->
-        <!--<div>Irivne, California</div>-->
-        <!--<div>OTHER STUFF HERE</div>-->
-        <!--<div>Icons made by <a class="flatIcon" href="https://www.flaticon.com">FlatIcon</a></div>-->
-    <!--</span>-->
-    <!--<div>-->
-        <!--<img class="socialMediaFooter" src="../imgs/email.svg" alt="">-->
-        <!--<img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">-->
-        <!--<img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">-->
-    <!--</div>-->
 
-<!--</div>-->
 
 <footer>
     <div class="footer">
@@ -202,32 +189,3 @@
 </html>
 
 
-<!--
-.committee{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    grid-gap: 15px;
-}
-
-.committee{
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-
-.committee
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    grid-gap: 15px;
-
-
-.member
-    flex: 1 1 auto;
-    justify-self: center;
-    font-size: 15px;
-    text-align: left;
-
--->
