--- a/html/eventsPage.html
+++ b/html/eventsPage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar slideDown">
+<nav class="navbar">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -37,14 +37,41 @@
     Events
 </div>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeeMJTmXLRIoGw-9OFyOpVh2stmk9swh7ZMwTIX1B1Vkl-XQg/viewform?embedded=true" width="640" height="2352" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<!--<iframe class="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_1_spam.svg" alt="">-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_2_donut.svg" alt="">-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop1_3_peach.svg" alt="">-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_1_tea.svg" alt="">-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_2_corn.svg" alt="">-->
-<!--<img class="sticker" src="../imgs/stickerPhotos/drop2_3_mochi.svg" alt="">-->
+
+
+<div class="stickers">
+    <div>
+        <h1>Sticker Fundraiser</h1>
+        <h3 class="stickerFundraiserDesc">
+            We are in the middle of Drop 2 for our sticker fundraiser! Please click on the current stickers for more information.
+        </h3>
+    </div>
+    <div class="stickerDrop">
+        <h2>Drop 2</h2>
+        <a href="https://forms.gle/4TY395TH4rPT9Swp7" target="_blank" class="stickerDrop">
+            <img class="sticker currentSticker" src="../imgs/stickerPhotos/drop2_1_tea.svg" alt="">
+        </a>
+        <a href="https://forms.gle/4TY395TH4rPT9Swp7" target="_blank" class="stickerDrop">
+            <img class="sticker currentSticker" src="../imgs/stickerPhotos/drop2_2_corn.svg" alt="">
+        </a>
+        <a href="https://forms.gle/4TY395TH4rPT9Swp7" target="_blank" class="stickerDrop">
+            <img class="sticker currentSticker" src="../imgs/stickerPhotos/drop2_3_mochi.svg" alt="">
+        </a>
+    </div>
+
+    <div class="stickerDrop">
+        <h2>Drop 1</h2>
+        <img class="sticker pastSticker" src="../imgs/stickerPhotos/drop1_1_spam.svg" alt="">
+        <img class="sticker pastSticker" src="../imgs/stickerPhotos/drop1_2_donut.svg" alt="">
+        <img class="sticker pastSticker" src="../imgs/stickerPhotos/drop1_3_peach.svg" alt="">
+    </div>
+</div>
+
+
+
+
+
+
 
 <footer>
     <div class="footer">
@@ -78,13 +105,13 @@
                 Contact Us
             </div>
             <div>
-                <a href="mailto:hungerovereasy@gmail.com">
+                <a href="mailto:hungerovereasy@gmail.com" class="aTag">
                     <img class="socialMediaFooter" src="../imgs/email.svg" alt="">
                 </a>
-                <a href="https://www.instagram.com/hungerovereasy/">
-                    <img class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
+                <a href="https://www.instagram.com/hungerovereasy/" class="aTag">
+                    <img id="instagram" class="socialMediaFooter" src="../imgs/instagram.svg" alt="">
                 </a>
-                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured">
+                <a href="https://www.youtube.com/channel/UCrRE0Uhqm0b_KHn_5DrkU-A/featured" class="aTag">
                     <img class="socialMediaFooter" src="../imgs/youtube.svg" alt="">
                 </a>
             </div>
@@ -103,3 +130,4 @@
 </body>
 
 </html>
+
