--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 
-<nav class="navbar slideDown">
-    <div class="container-fluid">
+<nav class="navbar">
+    <div class="container-fluid slideDown">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <img id="menuBtn" src="../imgs/menu.svg" alt="">
@@ -37,12 +37,17 @@
 
 
 <div class="container-fluid pagePanel homePageMainPanel">
-    <div class="topFormat slideUp">
-        <h1 class="title">Hunger,<br>Over Easy</h1>
-        <a class="learnMore" href="#aboutUs">Learn More</a>
+    <img id="pan" class="responsive slideUp" src="../imgs/panResize.svg" alt="">
+    <div class="leftCol">
+
+    </div>
+    <div class="rightCol">
+        <div class="topFormat slideUp">
+            <h1 class="title">Hunger,<br>Over Easy</h1>
+            <a class="learnMore" href="#aboutUs">Learn More</a>
+        </div>
     </div>
 
-    <img id="pan" class="responsive slideUp" src="../imgs/fryingPan.svg" alt="">
 </div>
 
 <div class="pagePanel aboutUs" id="aboutUs">
@@ -65,9 +70,6 @@
 
 </div>
 
-<!--<div class="pagePanel">-->
-    <!--&lt;!&ndash;<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJrcIidZfhDQM0PGIKVx6qsA4aIdMKlVyWaITDQIWBRTKJzg/viewform?embedded=true" width="640" height="2485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>&ndash;&gt;-->
-<!--</div>-->
 
 <footer>
     <div class="footer">
@@ -121,8 +123,6 @@
 
 
 
-<!--<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="js/landingPage.js"></script>
@@ -131,26 +131,4 @@
 </body>
 
 </html>
-
-
-<!--
-
-@media screen and (max-width: 500px) {
-    .navbar{
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-.navbar-collapse{
-    width: 50vw;
-    float: right
-}
-
-a{
-    color: black;
-    font-size: 20px;
-
-}
--->
 
