--- a/html/supportPage.html
+++ b/html/supportPage.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<nav class="navbar slideDown">
+<nav class="navbar">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -150,14 +150,3 @@
 
 </html>
 
-<!--
-.sponsorPanel{
-    height: 100vh;
-    width: 100vw;
-    background-color: #d2d2d2;
-}
-
-
-border: 1px solid;
-        border-image-source: radial-gradient(80.79% 50% at 50% 50%, #8C4424 0%, rgba(140, 68, 36, 0) 100%), linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
--->
